# advent-of-code

./: .gitignore
2021/: readme.md  run.py
2021/completed/: day1.py  day2.py  day3.py
2021/current/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  template.py  tester.py
2021/inputs/: day1example.txt  day26.txt  day2example.txt  day4example.txt  day5example.txt  day6example.txt  day7example.txt  day8example.txt  day9example.txt
2021/shared/: decorators.py
2023/: .env.example  aoc_service.py  main.py  pyproject.toml
2023/solutions/: day1.py
2023/tests/: test_day1.py
2024/: pyproject.toml  run.py
2024/completed/: day1.py  day2.py
2024/current/: day1.py  day10.py  day11.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day8vt.py  day9.py  recursion_example.py  tester.py
2024/inputs/: day1.txt  day1example.txt  day2.txt  day20.txt  day2example.txt  day3example.txt  day5example.txt
2024/shared/: helpers.py  util.py
2025/: aoc_service.py  db.py  main.py  pyproject.toml
2025/solutions/: day1.py  day10.py  day10v.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2025/tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
aocs/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
aocs/src/: app.html
aocs/src/lib/: db.ts
aocs/src/routes/: +layout.svelte  +page.svelte  (+2 more)
(+15 files in other folders)
