[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = []

[tool.ruff]
# Always autofix, but never try to fix `F401` (unused imports).
fix = true
unfixable = ["F401"]

# Never enforce `F401`
ignore = ["F401"]

# Ignore `E402` (import violations in any `__init__.py` file, and in `path/to/file.py`.
#per-file-ignores = {"__init__.py" = ["E402"], "path/to/file.py" = ["E402"]}